ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/EU_KPI__c.object-meta.xml
<CustomObject>
    <description>To add all KPI&apos;s for sales per year</description>
    <label>EU KPI</label>
    <nameField>
        <displayFormat>EUKPI-{000000}</displayFormat>
        <label>EU KPI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EU KPIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>