ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_KPI_Completed_Events__c.field-meta.xml
<CustomField>
    <fullName>EU_KPI_Completed_Events__c</fullName>
    <description>To indicate the KPI for completed events</description>
    <inlineHelpText>How many completed events are needed? (Event Type = Visit - Event - Meeting)</inlineHelpText>
    <label>KPI Completed Events</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>