ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_KPI_New_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>EU_KPI_New_Opportunities__c</fullName>
    <description>to indicate the PI for New Opportunities</description>
    <inlineHelpText>How many new opportunities have to be created?</inlineHelpText>
    <label>KPI Opportunity Closed Won CY-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>