ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_KPI_Pipeline_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>EU_KPI_Pipeline_Opp_Count__c</fullName>
    <description>to indicate the KPI for Pipeline Opp. Count</description>
    <label>KPI New Opportunities Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>