ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_KPI_Pipeline_Opp_value__c.field-meta.xml
<CustomField>
    <fullName>EU_KPI_Pipeline_Opp_value__c</fullName>
    <description>to indicate the KPI for Pipeline Opp. value</description>
    <inlineHelpText>What is the needed value of the Pipeline?</inlineHelpText>
    <label>KPI New Opportunities Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>