ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_KPI_Visits_to_Prospects_Partners__c.field-meta.xml
<CustomField>
    <fullName>EU_KPI_Visits_to_Prospects_Partners__c</fullName>
    <description>to indicate the KPI for Visits to Prospects &amp; Partner</description>
    <inlineHelpText>How many visits with Prospects and Partners are needed? (Event Type = Visit - Event - Meeting)</inlineHelpText>
    <label>KPI Completed Events to Prospect&amp;Partner</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>