ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_Opportunity_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>EU_Opportunity_Closed_Won__c</fullName>
    <description>to indicate the KPI for Opportunity Closed Won</description>
    <inlineHelpText>What is the amount that needs to be ClosedWon?</inlineHelpText>
    <label>KPI Opportunity Closed Won CY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>