ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_Sales__c.field-meta.xml
<CustomField>
    <fullName>EU_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For which sales is this KPI</description>
    <label>Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EU_KPIS</relationshipName>
    <type>Lookup</type>
</CustomField>