ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/fields/EU_Year__c.field-meta.xml
<CustomField>
    <fullName>EU_Year__c</fullName>
    <description>year for which the KPI is valid</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>