ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EU_Sales__c</columns>
    <columns>EU_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>